--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-<meta http-equiv="refresh" content="0; url=http://www.axetime.com/acts/rent/" />
+<meta http-equiv="refresh" content="0; url=http://colachan.com/tools" />
 <title>Cola Chan</title>
 </head>
 
